get started jumping fixed

--- a/assets/css/scroll.css
+++ b/assets/css/scroll.css
@@ -2,11 +2,14 @@
     margin-bottom: 15px;
     font-size: 18px;
     font-weight: 200;
-    color:red
+    color:red;
+	display:block;
+    overflow:scroll;
 }
 @media screen and (min-width: 768px) {
     #type {
         font-size: 23px;
+		height: 300px;
     }
 }
 
